<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_FaultList" Id="{2e1b3a47-e5f8-4607-9695-64ac2b817984}">
    <Declaration><![CDATA[TYPE ST_FaultList :
STRUCT
	Fault_1St : E_MpsFault;
	Fault_2St : E_MpsFault;
	Fault_3St : E_MpsFault;
	Fault_4St : E_MpsFault; 
	Fault_5St : E_MpsFault; 
	Fault_6St : E_MpsFault;
	Fault_7St : E_MpsFault;
	Fault_8St : E_MpsFault;
	Fault_9St : E_MpsFault;
	Fault_10St : E_MpsFault;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>